--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
       position: absolute;
       top: 0;
       left: 0;
+      width: 300px;
+      height: 200px;
+      opacity: 0.1;
     }
-    #ctrack-overlay {
+    #ctrack:hover {
+      opacity: 1;
+    }
+    #ctrack > canvas {
       position: absolute;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
     }
     #ctrack-convergence {
       position: absolute;
@@ -33,9 +41,24 @@
       color: #fff;
       font: 16px/1 monospace;
     }
+    #composite {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    #composite-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   </style>
 <body>
   <div id="container">
+    <div id="composite">
+      <canvas id="composite-image"></canvas>
+    </div>
     <div id="ctrack">
       <canvas id="ctrack-image" width="600" height="400"></canvas>
       <canvas id="ctrack-overlay" width="600" height="400"></canvas>
