--- a/index.html
+++ b/index.html
@@ -6,28 +6,20 @@
       box-sizing: border-box;
       margin: 0;
     }
-    #container {
+    #ctrack-container {
       position: absolute;
       top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      right: 285px;
+      padding: 0.5em;
+      width: 275px;
     }
     #ctrack {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 300px;
-      height: 200px;
-      opacity: 0.1;
-    }
-    #ctrack:hover {
-      opacity: 1;
+      position: relative;
+      overflow: hidden;
+      border-radius: 2px;
     }
     #ctrack > canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
+      display: block;
       width: 100%;
       height: auto;
     }
@@ -45,8 +37,8 @@
     }
   </style>
 <body>
-  <div id="container">
-    <div id="composite"></div>
+  <div id="composite"></div>
+  <div id="ctrack-container">
     <div id="ctrack"></div>
   </div>
   <script src="./lib/clmtrackr/clmtrackr.js"></script>
