Add search settings

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       right: 285px;
       padding: 0.5em;
       width: 275px;
+      pointer-events: none;
     }
     #ctrack {
       position: relative;
@@ -34,6 +35,10 @@
       position: absolute;
       top: 0;
       left: 0;
+    }
+    .oui {
+      overflow: auto;
+      max-height: 100vh;
     }
   </style>
 <body>
