--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <title>Face Melter</title>
-  <style type="text/css">
+  <title>Faces</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="description" content="Create strange face compositions with computer vision.">
+
+  <meta property="og:site_name" content="Faces">
+  <meta property="og:title" content="Faces">
+  <meta property="og:url" content="https://jayweeks.com/faces/">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Create strange face compositions with computer vision.">
+  <!-- <meta property="og:image" content="https://jayweeks.com/faces/assets/images/og-image.png"> -->
+  <!-- <meta property="og:image:width" content="1200"> -->
+  <!-- <meta property="og:image:height" content="630"> -->
+
+  <link href="/favicon.ico" rel="shortcut icon">
+  <!-- <link href="./assets/images/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <style>
     * {
       box-sizing: border-box;
       margin: 0;
