--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <meta property="og:url" content="https://jayweeks.com/faces/">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Create strange face compositions with computer vision.">
-  <!-- <meta property="og:image" content="https://jayweeks.com/faces/assets/images/og-image.png"> -->
-  <!-- <meta property="og:image:width" content="1200"> -->
-  <!-- <meta property="og:image:height" content="630"> -->
+  <meta property="og:image" content="https://jayweeks.com/faces/assets/images/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <link href="/favicon.ico" rel="shortcut icon">
-  <!-- <link href="./assets/images/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link href="./assets/images/apple-touch-icon.png" rel="apple-touch-icon">
   <style>
     * {
       box-sizing: border-box;
@@ -62,8 +62,11 @@
   <div id="ctrack-container">
     <div id="ctrack"></div>
   </div>
+  <!--
   <script src="./lib/clmtrackr/clmtrackr.js"></script>
   <script src="./lib/clmtrackr/models/model_pca_10_svm.js"></script>
-  <script src="./static/bundle.js"></script>
+   -->
+  <script src="./build/bundle-clmtrackr.js"></script>
+  <script src="./build/bundle-app.js"></script>
 </body>
 </html>
