--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      display: none;
       color: white;
       font: 16px/1 monospace;
     }
@@ -77,7 +76,7 @@
     <div id="ctrack"></div>
   </div>
   <div id="instructions">
-    > Enter a <em>searchPhrase</em> to begin.
+    > Loading ...
   </div>
   <!--
   <script src="./lib/clmtrackr/clmtrackr.js"></script>
