--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <script src="./lib/clmtrackr/clmtrackr.js"></script>
   <script src="./lib/clmtrackr/models/model_pca_10_svm.js"></script>
    -->
-  <script src="./build/bundle-clmtrackr.js"></script>
-  <script src="./build/bundle-app.js"></script>
+  <script src="./build/bundle-clmtrackr.js" defer="defer"></script>
+  <script src="./build/bundle-app.js" defer="defer"></script>
 </body>
 </html>
