--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html>
   <title>Faces</title>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta name="description" content="Create strange face compositions with computer vision.">
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=no"
+  />
+  <meta
+    name="description"
+    content="Create strange face compositions with computer vision."
+  />
 
-  <meta property="og:site_name" content="Faces">
-  <meta property="og:title" content="Faces">
-  <meta property="og:url" content="https://jayweeks.com/faces/">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="Create strange face compositions with computer vision.">
-  <meta property="og:image" content="https://jayweeks.com/faces/assets/images/og-image.png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Faces" />
+  <meta property="og:title" content="Faces" />
+  <meta property="og:url" content="https://milcktoast.com/faces/" />
+  <meta property="og:type" content="website" />
+  <meta
+    property="og:description"
+    content="Create strange face compositions with computer vision."
+  />
+  <meta
+    property="og:image"
+    content="https://milcktoast.com/faces/assets/images/og-image.png"
+  />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-  <link href="/favicon.ico" rel="shortcut icon">
-  <link href="./assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/favicon.ico" rel="shortcut icon" />
+  <link href="./assets/images/apple-touch-icon.png" rel="apple-touch-icon" />
   <style>
     * {
       box-sizing: border-box;
       margin: 0;
     }
     body {
-      background: #18081F;
+      background: #18081f;
     }
     a {
       color: white;
@@ -70,19 +82,17 @@
       max-height: 100vh;
     }
   </style>
-<body>
-  <div id="composite"></div>
-  <div id="ctrack-container">
-    <div id="ctrack"></div>
-  </div>
-  <div id="instructions">
-    > Loading ...
-  </div>
-  <!--
+  <body>
+    <div id="composite"></div>
+    <div id="ctrack-container">
+      <div id="ctrack"></div>
+    </div>
+    <div id="instructions">> Loading ...</div>
+    <!--
   <script src="./lib/clmtrackr/clmtrackr.js"></script>
   <script src="./lib/clmtrackr/models/model_pca_10_svm.js"></script>
    -->
-  <script src="./build/bundle-clmtrackr.js" defer="defer"></script>
-  <script src="./build/bundle-app.js" defer="defer"></script>
-</body>
+    <script src="./build/bundle-clmtrackr.js" defer="defer"></script>
+    <script src="./build/bundle-app.js" defer="defer"></script>
+  </body>
 </html>
